*shell*
tanner@Tanners-MacBook-Pro-Thatch entries % cargo check
cargo check
    Checking entries_utils v0.1.0 (/Users/tanner/repos/own/entries/entries-utils)
error[E0425]: cannot find function, tuple struct or tuple variant `Error` in this scope
  --> entries-utils/src/messages/mod.rs:28:20
   |
28 |             return Error(MessageError::InvalidUuid);
   |                    ^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
3  + use aes_gcm::Error;
   |
3  + use core::fmt::Error;
   |
3  + use log::Level::Error;
   |
3  + use log::LevelFilter::Error;
   |
     and 4 other candidates

error[E0277]: `MessageError` doesn't implement `Debug`
  --> entries-utils/src/messages/mod.rs:9:28
   |
9  | impl std::error::Error for MessageError {}
   |                            ^^^^^^^^^^^^ `MessageError` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `MessageError`
   = note: add `#[derive(Debug)]` to `MessageError` or manually `impl Debug for MessageError`
note: required by a bound in `StdError`
  --> /Users/tanner/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/error.rs:32:18
   |
32 | pub trait Error: Debug + Display {
   |                  ^^^^^ required by this bound in `Error`
help: consider annotating `MessageError` with `#[derive(Debug)]`
   |
5  + #[derive(Debug)]
6  | pub enum MessageError {
   |

Some errors have detailed explanations: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `entries_utils` (lib) due to 2 previous errors
tanner@Tanners-MacBook-Pro-Thatch entries % 